CHANGED: fixed problems with log inputs too large

--- a/src/app/spotbie/menu.component.css
+++ b/src/app/spotbie/menu.component.css
@@ -328,7 +328,7 @@ img.sb-qr:hover {
   position: relative;
   margin: 0 auto;
   text-align: center;
-  max-width: 90%;
+  max-width: 400px;
 }
 .sb-login-top-padding {
   padding-top: 120px;
