--- a/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
+++ b/src/app/spotbie/spotbie-logged-out/forgot-password/forgot-password.component.css
@@ -88,7 +88,7 @@
   position: relative;
   margin: 0 auto;
   text-align: center;
-  max-width: 90%;
+  max-width: 400px;
 }
 /**WIDTH MEDIA QUERIES */
 @media (max-width: 768px) {
